build-logs-failed/build-twitter-types-0.11.0.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - twitter-types-0.11.0 (lib) (first run)
 - twitter-types-0.11.0 (test:tests) (first run)
Configuring library for twitter-types-0.11.0...
Preprocessing library for twitter-types-0.11.0...
Building library for twitter-types-0.11.0...
[1 of 1] Compiling Web.Twitter.Types
Configuring test suite 'tests' for twitter-types-0.11.0...
Preprocessing test suite 'tests' for twitter-types-0.11.0...
Building test suite 'tests' for twitter-types-0.11.0...
[1 of 6] Compiling Fixtures
[2 of 6] Compiling Instances

tests/Instances.hs:20:67: error:
    Module ‘Data.Time’ does not export ‘readTime’
   |
20 | import Data.Time (UTCTime (..), defaultTimeLocale, fromGregorian, readTime)
   |                                                                   ^^^^^^^^
Error: [Cabal-7125]
Failed to build test:tests from twitter-types-0.11.0.

